release/1.18.2/VERSION.md
# 1.18.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.18.2```   |
| Release Time   | ```2022-02-28T10:42:45+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.18```   |
| sha1   | ```d31a2e85ae149dd1b1a7070b22cb8887892fda6c```   |
| size   | ```348724```   |
| total size  | ```468892705```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/d31a2e85ae149dd1b1a7070b22cb8887892fda6c/1.18.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```2e9a3e3107cca00d6bc9c97bf7d149cae163ef21```   |
| size   | ```20259661```   |
| url       | ```https://piston-data.mojang.com/v1/objects/2e9a3e3107cca00d6bc9c97bf7d149cae163ef21/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```c8f83c5655308435b3dcf03c06d9fe8740a77469```   |
| size   | ```46592587```   |
| url       | ```https://piston-data.mojang.com/v1/objects/c8f83c5655308435b3dcf03c06d9fe8740a77469/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```java-runtime-beta```   |
| version   | ```17```   |